[package]
name = "tifiles"
version = "0.2.0"
edition = "2021"

authors = ["Peter Marheine <peter@taricorp.net>"]
description = "Tools for manipulating file formats used with TI graphing calculators"
documentation = "https://docs.rs/tifiles/"
repository = "https://gitlab.com/taricorp/tifiles-rs"

readme = "README.md"
license = "BSD-2-Clause"

keywords = ["ticalc"]
categories = ["encoding", "parser-implementations"]

[features]
default = ["bundles"]
bundles = ["zip", "crc32fast"]

[dependencies]
crc32fast = { version = "1.3.2", optional = true }
num_enum = "0.5.7"
thiserror = "1.0.30"

[dependencies.zip]
version = "0.6.3"
optional = true
default-features = false
